tests/should_fail/assign_to_constants.sd
MY_STRING :: "Hello Sad Buyers!";

main :: () {
    MY_STRING = "123"; // not allowed
}